add admin dashboard

--- a/app/views/contact_requests/_form.html.erb
+++ b/app/views/contact_requests/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: contact_request, class: "contact-form" do |f| %>
+<%= form_with model: contact_request, class: "form contact-form" do |f| %>
   <%= f.label "Name:" %>
   <%= f.text_field :name, required: true %>
   <%= f.label "Email:" %>
