--- a/app/assets/stylesheets/contact_requests.scss
+++ b/app/assets/stylesheets/contact_requests.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.contact-form {
+.form {
   max-width: 300px;
   margin: 10px auto;
   display: flex;
@@ -12,7 +12,7 @@
     margin: 10px 0;
   }
 
-  input[type=text] {
+  input[type=text], input[type=password] {
     margin-bottom: 7px;
     background: none;
     border: none;
